welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:3: error: type lightGray is not a member of object java.awt.Color
  setCouleurBrosse(c:Color.lightGray)
                           ^SlugHunting:3: error: not found: value c
  setCouleurBrosse(c:Color.lightGray)
                   ^